--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cp ./src/index.html ./dist/index.html && webpack && node server"
+    "start": "cp ./src/index.html ./dist/index.html && node server"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,19 @@
     "express": "^4.15.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
     "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
+    "@types/react-redux": "^5.0.9",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-redux": "^5.0.8",
+    "@types/redux": "^3.6.0",
     "html-loader": "^0.5.1",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
