--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-router": "^4.2.0",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "rxjs": "^5.4.3",
     "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/react-router": "^4.0.15",
     "@types/react-router-redux": "^5.0.8",
     "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.2.2",
     "html-loader": "^0.5.1",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
