--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
+    "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
     "webpack-dev-middleware": "^1.12.0"
   },
@@ -37,6 +38,7 @@
     "@types/react-router-redux": "^5.0.8",
     "@types/redux": "^3.6.0",
     "@types/redux-actions": "^2.2.2",
+    "@types/reselect": "^2.2.0",
     "html-loader": "^0.5.1",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
