--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-register": "^6.26.0",
     "express": "^4.15.5",
+    "lodash": "^4.17.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -31,6 +32,7 @@
     "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.76",
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
     "@types/react-redux": "^5.0.9",
