--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-register": "^6.26.0",
     "express": "^4.15.5",
     "lodash": "^4.17.4",
+    "phoenix": "git+https://github.com/phoenixframework/phoenix.git",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
